Updatesd assets and contact
Fixed links for mail and linked in
Updated CVs

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -7,10 +7,7 @@
     <div class="col">
       <br><br><br>
       <p>
-        <a href="http://www.linkedin.com/in/aidan-abbott"> <img src="../../assets/icons/MailIcon.svg" width={{iconWidth}}>   aidan@aidanabbott.co.uk</a>
-      </p>
-      <p>
-        <a href="http://www.linkedin.com/in/aidan-abbott"> <img src="../../assets/icons/SkypeIcon.svg" width={{iconWidth}}>   a.t.abbott</a>
+        <a href="mailto:aidan@aidanabbott.co.uk" target="top"> <img src="../../assets/icons/MailIcon.svg" width={{iconWidth}}>   aidan@aidanabbott.co.uk</a>
       </p>
       <p>
         <a href="http://www.linkedin.com/in/aidan-abbott"> <img src="../../assets/icons/LinkedinIcon.svg" width={{iconWidth}}></a> <br>
